[package]
name = "auto_flask"
version = "0.1.0"
authors = ["Wiggidy <ronaldriggles@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
rdev = "^0.4"
derive_more = "^0.99"